<resources>
    <string name="app_name">Quiz App Firebase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="logout">logout</string>
    <string name="quiz">Quiz</string>
    <string name="user">User</string>
    <string name="nothing_to_display">Nothing to display</string>
    <string name="desc">Description</string>
    <string name="title">Title</string>
    <string name="success_message">%1$s successful!</string>
    <string name="add_quiz">Add Quiz</string>
    <string name="edit_quiz">Edit Quiz</string>
    <string name="timer_display">%1$s seconds left</string>
    <string name="score">Score</string>
    <string name="time">time</string>
    <string name="score_text">Score: %1$d</string>
    <string name="time_taken_text">Time taken: %1$d seconds</string>

    <string-array name="role_options">
        <item>TEACHER</item>
        <item>STUDENT</item>
    </string-array>
</resources>